2009-02-01  Hans Breuer  <hans@breuer.org>

	* lib/object.[ch] lib/dia_xml.[ch] lib/prop_dict.[ch] 
	  lib/properties.[ch] lib/propinternals.h lib/Makefile.am 
	  lib/libdia.def po/POTFILES.in : allow to serialize meta info with 
	every DiaObject - no UI to modify it yet
	* lib/plug-ins.h : bump api version because object size has changed
	* plug-ins/python/pydia-property.c : handle translation between Python
	and Dia dictionary to make accesible. Also s/g_warning/g_debug/
	* plug-ins/python/diasvg_import.c : generate object meta info to test
	the above. Also fixes regarding text color.

	* objects/makefile.msc : Grid object on win32, too

2009-01-31  Hans Breuer  <hans@breuer.org>

	* lib/dia_xml.[ch] lib/libdia.def : implement data_(add_)bezpoint to 
	serialize bezier points
	* lib/prop_geomtypes.c : use it instead of g_error() for an attempt to
	save a bezpoint array (not used by any object implementation yet)

	* plug-ins/python/diasvg_import.py : fixed typo

	* objects/Misc/grid_object.c : give ranges to rows/columns properties
	to avoid crashing on negative numbers, similar for line_width

	* objects/Misc/pixmaps/grid_object.xpm objects/Misc/grid_object.c
	  objects/Misc/libmisc.c objects/Misc/Makefile.am sheets/Misc.sheet.in:
	patch from Don Blaheta adding a Grid object, bug #534118

	* doc/en/intro.xml doc/en/usage-quickstart.xml : moved "try Dia" 
	flowchart to introduction.

	* configure.in : configure failed to locate libpython when building GARNOME, 
	bug #338368 (Hans de Goede)

	* omf.make : bug #306737 - installation fails in install-data-hook-omf
	if omffile variable is empty (patch from Thomas Harding)

	* doc/en/*.xml : remove undefined entity  '.&pngfile'
	* po/POTFILES.in lib/sheetc : more strings to translate ;)
	* doc/en/Makefile.am : added new images ('make distcheck' passes)

	[
	  Huge documentation update from Mark Dexter, bug #455400, 
	  hope I didn't break anything during merge.
	]
	* doc/en/*.xml doc/en/graphics/*.png : 